--- a/data_structures/SingleLinkedList.ipynb
+++ b/data_structures/SingleLinkedList.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "# Steps to add the nodes to the LinkedList\n",
+    "# Steps to add or insert the nodes at the end to the LinkedList\n",
     "\n",
     "# 1. create the node\n",
     "# 2. create the single linkedlist\n",
