--- a/data_structures/traversal_tree_nd_sorting.ipynb
+++ b/data_structures/traversal_tree_nd_sorting.ipynb
@@ -231,6 +231,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element 3 is present at index for Binary Search  10\n",
+      "\n",
+      "Element 7 is present at index for linear Search  100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BINARY SERACH TREE\n",
+    "# --------------------\n",
+    "# Search a sorted array by repeatedly dividing the search interval in half. Begin with an interval covering the whole array.\n",
+    "# If the value of the search key is less than the item in the middle of the interval, narrow the interval to the lower half.\n",
+    "# Otherwise narrow it to the upper half. Repeatedly check until the value is found or the interval is empty.\n",
+    "\n",
+    "def binarySearch(my_list, num):\n",
+    "    low = 0\n",
+    "    high = len(my_list)-1\n",
+    "    \n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        \n",
+    "        # Check if num is present at mid \n",
+    "        if my_list[mid] == num:\n",
+    "            return mid\n",
+    "        else:\n",
+    "            # If num is greater, ignore left half \n",
+    "            if my_list[mid] < num:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                # If num is smaller, ignore left half \n",
+    "                high = mid -1\n",
+    "                \n",
+    "    # If we reach here, then the element was not present\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "my_list = [ 2, 3, 4, 10, 40 ] \n",
+    "num = 10\n",
+    "\n",
+    "# To call the function\n",
+    "result = binarySearch(my_list, num)\n",
+    "\n",
+    "if result != False:\n",
+    "    print('Element %s is present at index for Binary Search % d' % (result, num))\n",
+    "else:\n",
+    "    print('Element %s is not present in list' % num)\n",
+    "    \n",
+    "    \n",
+    "# LINEAR SEARCH\n",
+    "\n",
+    "def linearSearch(arr, x): \n",
+    "  \n",
+    "    for i in range(len(arr)): \n",
+    "  \n",
+    "        if arr[i] == x: \n",
+    "            return i \n",
+    "  \n",
+    "    return -1\n",
+    "        \n",
+    "arr = [10, 20, 80, 30, 60, 50, 110, 100, 130, 170]\n",
+    "x = 100\n",
+    "\n",
+    "result = linearSearch(arr, x)\n",
+    "\n",
+    "if result != False:\n",
+    "    print('\\nElement %s is present at index for linear Search % d' % (result, x))\n",
+    "else:\n",
+    "    print('Element %s is not present in list' % x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
