--- a/programs/practice_programs.py.ipynb
+++ b/programs/practice_programs.py.ipynb
@@ -593,6 +593,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "String Output: a\n",
+      "Previous value: a\n",
+      "Order of previous no: 97\n",
+      "Order of previous and integer no: 101\n",
+      "\n",
+      "String Output: aek\n",
+      "Previous value: k\n",
+      "Order of previous no: 107\n",
+      "Order of previous and integer no: 110\n",
+      "\n",
+      "String Output: aeknb\n",
+      "Previous value: b\n",
+      "Order of previous no: 98\n",
+      "Order of previous and integer no: 102\n",
+      "\n",
+      "Converting to the alpha: aeknbf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to perform as input = a4k3b4 and output = aeknbf\n",
+    "str1 = 'a4k3b4'\n",
+    "output = ''\n",
+    "for s in str1:\n",
+    "    if s.isalpha():\n",
+    "        output += s\n",
+    "        print('\\nString Output:', output)\n",
+    "        previous = s\n",
+    "        print('Previous value:', previous)\n",
+    "    else:\n",
+    "        print('Order of previous no:', ord(previous))\n",
+    "        print('Order of previous and integer no:',ord(previous)+int(s))\n",
+    "        output = output + chr(ord(previous)+int(s))\n",
+    "print('\\nConverting to the alpha:',output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorting the string first alpha then digit: ABD134\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to perform to input = B4A1D3 and output = BAD413\n",
+    "str2 = 'B4A1D3'\n",
+    "output1 = ''\n",
+    "output2 = ''\n",
+    "for s in str2:\n",
+    "    if s.isalpha():\n",
+    "        output1 += s\n",
+    "    else:\n",
+    "        output2 += s\n",
+    "\n",
+    "print('Sorting the string first alpha then digit:',''.join(sorted(output1))+''.join(sorted(output2)))\n",
+    "# print(''.join(sorted(output2)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Str is palindrome: madam\n",
+      "New string: madam\n",
+      "Str is palindrome: madam\n"
+     ]
+    }
+   ],
+   "source": [
+    "# palindrome\n",
+    "str = 'madam'\n",
+    "s=''\n",
+    "\n",
+    "if str == str[::-1]:\n",
+    "    print('Str is palindrome:', str)\n",
+    "else:\n",
+    "    print('not Palindrome')\n",
+    "\n",
+    "for i in str:\n",
+    "    s = i+s\n",
+    "print('New string:', s)\n",
+    "if str == s:\n",
+    "    print('Str is palindrome:', str)\n",
+    "else:\n",
+    "    print('not Palindrome')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Palindrome: 10\n",
+      "Palindrome: 11\n",
+      "Not Palindrome: 12\n",
+      "Not Palindrome: 13\n",
+      "Not Palindrome: 14\n",
+      "Not Palindrome: 15\n",
+      "Not Palindrome: 16\n",
+      "Not Palindrome: 17\n",
+      "Not Palindrome: 18\n",
+      "Not Palindrome: 19\n",
+      "Not Palindrome: 20\n",
+      "Not Palindrome: 21\n",
+      "Palindrome: 22\n",
+      "Not Palindrome: 23\n",
+      "Not Palindrome: 24\n",
+      "Not Palindrome: 25\n",
+      "Not Palindrome: 26\n",
+      "Not Palindrome: 27\n",
+      "Not Palindrome: 28\n",
+      "Not Palindrome: 29\n",
+      "Not Palindrome: 30\n",
+      "Not Palindrome: 31\n",
+      "Not Palindrome: 32\n",
+      "Palindrome: 33\n",
+      "Not Palindrome: 34\n",
+      "Not Palindrome: 35\n",
+      "Not Palindrome: 36\n",
+      "Not Palindrome: 37\n",
+      "Not Palindrome: 38\n",
+      "Not Palindrome: 39\n",
+      "Not Palindrome: 40\n",
+      "Not Palindrome: 41\n",
+      "Not Palindrome: 42\n",
+      "Not Palindrome: 43\n",
+      "Palindrome: 44\n",
+      "Not Palindrome: 45\n",
+      "Not Palindrome: 46\n",
+      "Not Palindrome: 47\n",
+      "Not Palindrome: 48\n",
+      "Not Palindrome: 49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the Number is Palindrome or not in range 100-200\n",
+    "for num in range(10, 50):\n",
+    "    num1 = num\n",
+    "    d = 0\n",
+    "\n",
+    "    while num > 0:\n",
+    "        r = num % 10\n",
+    "        d = d*10+r\n",
+    "        num = num//10\n",
+    "\n",
+    "    if num1 == d:\n",
+    "        print('Palindrome:', num1)\n",
+    "    else:\n",
+    "        print('Not Palindrome:', num1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
