--- a/programs/practice_programs.py.ipynb
+++ b/programs/practice_programs.py.ipynb
@@ -770,6 +770,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorting according to first element: [(1, 3), (2, 2), (3, 4), (4, 1)]\n",
+      "\n",
+      "Sorting according to sort function: [(1, 3), (2, 2), (3, 4), (4, 1)]\n",
+      "\n",
+      "Sorting according to second element: [(4, 1), (2, 2), (1, 3), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using Lambda function, sort the elements\n",
+    "\n",
+    "# Sort according to the first element\n",
+    "# Step-1:\n",
+    "y = sorted([(2, 2), (3, 4), (4, 1), (1, 3)], key=lambda x: x[0])\n",
+    "print('Sorting according to first element:', y)\n",
+    "\n",
+    "# Step-2:\n",
+    "l = [(2, 2), (3, 4), (4, 1), (1, 3)]\n",
+    "l.sort(key=lambda x: x[0])\n",
+    "print('\\nSorting according to sort function:', l)\n",
+    "\n",
+    "# Sort according to the second element\n",
+    "y = sorted([(2, 2), (3, 4), (4, 1), (1, 3)], key=lambda x: x[1])\n",
+    "print('\\nSorting according to second element:', y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List should be according to negative and positive no: [-13, -5, -7, -3, -6, 12, 11, 6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using lambda Function first negative number then positive number\n",
+    "from functools import reduce\n",
+    "\n",
+    "arr = [12, 11, -13, -5, 6, -7, 5, -3, -6]\n",
+    "a = list(reduce(lambda x, y : [x for x in arr if x < 0] + [x for x in arr if x > 0], arr))\n",
+    "print('List should be according to negative and positive no:',a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "buzz\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "buzz\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizz\n",
+      "16\n",
+      "17\n",
+      "fizz\n",
+      "19\n",
+      "buzz\n",
+      "\n",
+      "\n",
+      "numbers: [1, 2, 'fizz', 4, 'buzz', 'fizz', 7, 8, 'fizz', 'buzz', 11, 'fizz', 13, 14, 'fizz', 16, 17, 'fizz', 19, 'buzz', 'fizz', 22, 23, 'fizz', 'buzz', 26, 'fizz', 28, 29, 'fizz', 31, 32, 'fizz', 34, 'buzz', 'fizz', 37, 38, 'fizz', 'buzz', 41, 'fizz', 43, 44, 'fizz', 46, 47, 'fizz', 49, 'buzz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prints the numbers from 1 to 100, but for multiples of 3 it prints 'fizz',\n",
+    "# for multiples of 5 it prints 'buzz' and for multiples of both 3 and 5 it prints 'fizzbuzz')\n",
+    "\n",
+    "# Normal\n",
+    "for i in range(1,21):\n",
+    "    if i%3 == 0:\n",
+    "        print('fizz')\n",
+    "    elif i%5 == 0:\n",
+    "        print('buzz')\n",
+    "    elif i%3 == 0 and i%5 == 0:\n",
+    "        print('fizzbuzz')\n",
+    "    else:\n",
+    "        print(i)\n",
+    "print('\\n')\n",
+    "\n",
+    "# List comprehension\n",
+    "y = ['fizz' if i%3==0 else 'buzz' if i%5==0 else 'fizzbuzz' if i%3 == 0 and i%5 == 0 else i for i in range(1,51)]\n",
+    "print('numbers:', y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime no using list comprehension: [2, 3, 5, 7]\n",
+      "\n",
+      "Prime no using list comprehension: [2, 3, 5, 7]\n",
+      "\n",
+      "Square: [1, 9, 25, 49, 81]\n",
+      "\n",
+      "Power: [2, 4, 8, 16, 32, 64, 128, 256]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehension\n",
+    "# prime No\n",
+    "# By Using all keyword\n",
+    "z = [x for x in range(2, 10) if all(x % y != 0 for y in range(2, x))]\n",
+    "print('Prime no using list comprehension:', z)\n",
+    "\n",
+    "#By Using any keyword\n",
+    "y = [x for x in range(2, 10) if not any(x % y == 0 for y in range(2, x))]\n",
+    "print('\\nPrime no using list comprehension:', y)\n",
+    "\n",
+    "# 2. below list contains square of all odd numbers from range 1 to 10\n",
+    "sq = [i**2 for i in range(1, 11) if i % 2 != 0]\n",
+    "print('\\nSquare:',sq)\n",
+    "\n",
+    "# 3. below list contains power of 2 from 1 to 8\n",
+    "pw = [2**i for i in range(1, 9)]\n",
+    "print('\\nPower:',pw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 prime no\n",
+      "3 prime no\n",
+      "5 prime no\n",
+      "7 prime no\n",
+      "11 prime no\n",
+      "13 prime no\n",
+      "17 prime no\n",
+      "19 prime no\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Below list contains prime and non-prime in range 1 to 50\n",
+    "for i in range(2, 20):\n",
+    "    for j in range(2, i):\n",
+    "        if i % j == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i, 'prime no')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: ['a', 'c'], 2: ['b']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Changing key to value and value to key in dictionary\n",
+    "\n",
+    "d = {'a': 1, 'b': 2, 'c': 1}\n",
+    "d1 = {}\n",
+    "for k, v in d.items():\n",
+    "    if d[k] not in d1:\n",
+    "        d1[v] = [k]\n",
+    "    else:\n",
+    "        d1[v].append(k)\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
